# globalmetin

./: CMakeLists.txt  Titan2.code-workspace  build.sh  build_x64.bat  build_x86.bat  create_proj_x64.bat  create_proj_x86.bat  rebuild_x64.bat  rebuild_x86.bat
source/client/: .gitignore  CMakeLists.txt  Titan2Client.sln
source/client/source/AntiCheatLib/: AntiDebug.cpp  AntiInputInjection.cpp  AntiMacro.cpp  AnticheatManager.cpp  AnticheatManager.h  AnticheatWatchdog.cpp  CMakeLists.txt  CheatQuarentineManager.cpp  CheatQuarentineManager.h  CheatQueueManager.cpp  CheatQueueManager.h  DataBuffer.cpp  DataBuffer.h  DllInjectionCheck.cpp  DumpProtection.cpp  Elevation.cpp  Exception.cpp  Exception.h  ExceptionFilter.cpp  File.cpp  File.h  FileIdentifier.cpp  HandleScanner.cpp  MappedFileIdentifier.cpp  MemoryScanner.cpp  NTDefinations.h  ParentCheck.cpp  ProcessNameHelper.h  ProcessScanner.cpp  ProtectionMacros.h  PythonModuleCheck.cpp  PythonStackCheck.cpp  PythonStackCheck.h  RSA.cpp  RSA.h  Random.cpp  Random.h  ScreenProtection.cpp  Secret.cpp  Secret.h  (+33 more)
source/server/: .gitignore  CMakeLists.txt
source/server/common/: VnumHelper.h  building.h  cache.h  d3dtype.h  defines.h  item_length.h  length.h  noncopyable.h  pool.h  singleton.h  stl.h  tables.h  utils.h
source/server/db/: CMakeLists.txt
source/server/game/: CMakeLists.txt
source/server/libgame/: CMakeLists.txt
source/server/liblisans/: CMakeLists.txt
source/server/liblua/: CMakeLists.txt
source/server/libsql/: CMakeLists.txt
source/server/libthecore/: CMakeLists.txt
source/server/quest_compiler/: CMakeLists.txt  quest_functions
source/server/vrunner/: CMakeLists.txt  main.cpp
source/utilities/FoxNet/: CMakeLists.txt
source/utilities/VFSPro/: .gitignore  CMakeLists.txt  config.json  genproperty.bat
tools/: .gitignore  CMakeLists.txt
tools/Archiver/: FoxFS.sln
tools/Archiver/CMake/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
tools/CoreWatcher/: CMakeLists.txt
tools/CoreWatcher/include/: FileMonitor.h
tools/CoreWatcher/src/: FileMonitor.cpp  main.cpp
tools/DBManager/: DBMANAGER-HOWTO.txt  export.sh  import.sh  pan.sh  sync.sh
tools/DBManager/.worker/: DB2Excel.sh  DB2Names.sh  DB2Proto.sh  DB2SQLData.sh  DB2SQLSchema.sh  Excel2DB.sh  MakePatch.sh  Name2DB.sh
tools/DumpProto - OFFİCAL AÇICI/: DumpProto.sln
tools/DumpProto - OFFİCAL AÇICI BASIC/HOWTO/: mob_names.txt  mob_proto  mob_proto.txt
tools/DumpProto - OFFİCAL AÇICI BASIC/dump_proto/: ItemCSVReader.cpp  dump_proto.cpp  dump_proto.h  dump_proto.rc
tools/DumpProto - OFFİCAL AÇICI/HOWTO/: item_proto  mob_proto
tools/DumpProto - OFFİCAL AÇICI/dump_proto/: ItemCSVReader.cpp  dump_proto.cpp  dump_proto.vcxproj  tea.h
tools/DumpProto - OFFİCAL AÇICI/lzo/: lzo.vcxproj  lzo.vcxproj.filters
tools/DumpProto/HOWTO/: 1mob_proto_edit.txt  copy_to_share.bat  item_names.txt  item_names2.txt  item_proto.txt  item_proto2.txt  mob_names.txt  mob_names2.txt  mob_proto.txt  mob_proto2.txt  mob_proto_edit.txt
tools/DumpProto/dump_proto/: CsvFile.cpp  CsvFile.h  ItemCSVReader.cpp  ItemCSVReader.h  Singleton.h  dump_proto.cpp  dump_proto.vcproj  dump_proto.vcxproj  dump_proto.vcxproj.filters  tea.cpp
tools/DumpProto/lzo/: lzo.vcxproj  stdafx.cpp
tools/DumpProto_cmake/: CMakeLists.txt  dump_proto.rc
tools/DumpProto_cmake/include/: CsvFile.h  ItemCSVReader.h  dump_proto.h  lzo.h
tools/DumpProto_cmake/src/: CsvFile.cpp  ItemCSVReader.cpp  dump_proto.cpp  lzo.cpp  tea.cpp
tools/GrannyConverter/: CMakeLists.txt
tools/GrannyConverter/src/: GrannyConverter.cpp
tools/M2TxtToJson/: .gitignore  CMakeLists.txt  convert_mob_drop_info_to_json.bat  parse_mob_drop_info_json.bat
tools/M2TxtToJson/M2Stuffs/: FileLoader.cpp  FileLoader.h  TextFileLoader.cpp  TextFileLoader.h  d3dtype.h  log.h  pool.h  stl.h  utils.h
tools/M2TxtToJson/Sources/: JsonParser.cpp  Parser.h  TxtParser.cpp  Types.h  main.cpp
tools/Metin2MSAMaker/: CMakeLists.txt
tools/Metin2MSAMaker/include/: ModelManager.h
tools/Metin2MSAMaker/src/: Metin2MSAMaker.cpp  ModelManager.cpp
tools/Mysql2Proto/: Mysql2Proto.sln
tools/Mysql2Proto/HOWTO/: Mysql2Proto.json  item_proto  mob_proto
tools/Mysql2Proto/Mysql2Proto/: Mysql2Proto.cpp  Mysql2Proto.json.sample  Mysql2Proto.vcproj  Mysql2Proto.vcxproj  lzo.cpp
tools/Mysql2Proto/lzo/: alloc.c  lzo.vcproj  lzo.vcxproj
tools/OBSOLOTED/LoginChecker/: metin2login_test.py  server_list.xml
tools/OBSOLOTED/Metin2PackMaker/: Main.cpp  Metin2PackMaker.sln  Metin2PackMaker.vcproj  Metin2PackMaker.vcxproj
tools/OBSOLOTED/SoundArranger/: ActorInstanceAccessor.cpp  ActorInstanceAccessor.h  ChildFrm.cpp  ChildFrm.h  DlgMotionViewMode.cpp  DlgMotionViewMode.h  FileOpener.cpp  FileOpener.h  GraphViewer.cpp  GraphViewer.h  MainFrm.cpp  MainFrm.h  MainFrmControl.cpp  MainFrmFile.cpp  MainFrmResource.cpp  Manager.cpp  Manager.h  ModelViewer.cpp  ModelViewer.h  PageCtrl.cpp  PageCtrl.h  PageMotionProperty.cpp  PageMotionProperty.h  PageSoundList.cpp  PageSoundList.h  RaceDataAccessor.cpp  RaceDataAccessor.h  RaceManagerAccessor.cpp  RaceManagerAccessor.h  ResModelList.cpp  ResModelList.h  ResMotionList.cpp  ResMotionList.h  ResSoundData.cpp  ResSoundData.h  ST_SplitterWnd.cpp  ST_SplitterWnd.h  SoundArranger.cpp  SoundArranger.h  SoundArranger.rc  (+15 more)
tools/OBSOLOTED/TorrentPatch/: CConfig.cpp  CConfig.h  CCrcTable.cpp  CCrcTable.h  CLocaleManager.cpp  CLocaleManager.h  CMiniUnZIP.cpp  CMiniUnZIP.h  CPostIt.cpp  CPostIt.h  CVersionFile.cpp  CVersionFile.h  CrcPatcher.cpp  CrcPatcher.h  Helper.cpp  Helper.h  LauncherDef.h  Metin2TorrentConsole.cpp  Metin2TorrentConsole.h  Metin2TorrentConsole.rc  Metin2TorrentConsoleLink.h  PatchConfig.h  PatchInfo.h  PatchStatus.h  PatchThread.cpp  PatchThread.h  SkinButton.cpp  SkinButton.h  SkinGauge.cpp  SkinGauge.h  SkinText.cpp  SkinText.h  SkinWindow.cpp  SkinWindow.h  StringFromFile.cpp  StringFromFile.h  StringFromHttp.cpp  StringFromHttp.h  TorrentPatch.cpp  TorrentPatch.exe.manifest  (+21 more)
tools/OBSOLOTED/mysql2proto/: Mysql2Proto_Unpack.bat  Mysql2Proto_UnpackSql.bat  README.txt
(+1217 files in other folders)
