cmake_minimum_required(VERSION 3.2)
project(tools)

add_subdirectory(${PROJECT_SOURCE_DIR}/CoreWatcher)
if(WIN32)
	add_subdirectory(${PROJECT_SOURCE_DIR}/DumpProto_cmake)
	add_subdirectory(${PROJECT_SOURCE_DIR}/M2TxtToJson)
	add_subdirectory(${PROJECT_SOURCE_DIR}/GrannyConverter)
	add_subdirectory(${PROJECT_SOURCE_DIR}/Metin2MSAMaker)
#	add_subdirectory(${PROJECT_SOURCE_DIR}/WorldEditor)
endif()